# BJJ_Analysis

./: .gitignore  Home.md  README.md  requirements.txt
tools/bjj-app/: README.md  pyproject.toml
tools/bjj-app/scripts/: apply_technique_drafts.py  bootstrap_technique_notes.py  dev.sh  run.sh
tools/bjj-app/server/: config.py  db.py  main.py
tools/bjj-app/server/analysis/: claude_cli.py  frames.py  pipeline.py  pose.py  positions_vault.py  prompt.py  rate_limit.py  sections.py  summarise.py  taxonomy.py  techniques_vault.py  vault.py  vault_writer.py  video.py
tools/bjj-app/server/api/: analyse.py  annotations.py  export_pdf.py  graph.py  moments.py  publish.py  rolls.py  summarise.py
tools/bjj-app/server/eval/: README.md  __main__.py  cli.py  fixtures.py  judge.py  report.py  runner.py  variants.py
tools/bjj-app/server/export/: pdf.py
tools/bjj-app/tests/backend/: conftest.py  test_api.py  test_api_analyse.py  test_api_analyse_sections.py  test_api_annotations.py  test_api_export_pdf.py  test_api_get_roll.py  test_api_graph.py  test_api_graph_paths.py  test_api_moments.py  test_api_publish.py  test_api_summarise.py  test_api_upload.py  test_claude_cli.py  test_db.py  test_db_analyses.py  test_db_annotations.py  test_db_cache.py  test_db_moments.py  test_db_schema_m9.py  test_db_schema_m9b.py  test_db_schema_migration.py  test_db_sections.py  test_db_summary_state.py  test_db_vault_state.py  test_eval_cli.py  test_eval_fixtures.py  test_eval_judge.py  test_eval_report.py  test_eval_runner.py  test_eval_variants.py  test_export_pdf.py  test_export_pdf_template.py  test_frames.py  test_m10_grounding.py  test_pipeline.py  test_pipeline_sections.py  (+15 more)
tools/bjj-app/web/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+277 files in other folders)
