[project]
name = "bjj-app"
version = "0.1.0"
description = "Local BJJ roll review app — FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiofiles>=24.1.0",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "opencv-python-headless>=4.10.0",
    "Pillow>=10.4.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: slow live-CLI tests that spend Claude budget (run manually with -m integration)",
]
addopts = "-m 'not integration'"
